--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "coffeebreak",
     "testrunner",
     "unittest",
-    "mocca",
-    "moccatest",
-    "moccatestrunner"
+    "mocha",
+    "mochatest",
+    "mochatestrunner"
   ],
   "author": "Andi Heinkelein <andi@noname-media.com> (http://noname-media.com/)",
   "license": "MIT",
   "dependencies": {
-    "xqnode-logger": "0.0.2",
+    "xqnode-logger": "~0.0.2",
     "glob": "~3.2.6",
     "minimatch": "~0.2.12",
     "node.extend": "~1.0.8",
