--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
   "devDependencies": {
     "expect.js": "~0.2.0",
     "sinon": "~1.7.3",
-    "sinon-expect": "~0.2.0"
+    "sinon-expect": "~0.2.0",
+    "grunt": "~0.4.2",
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-mocha-cli": "~1.3.0"
   }
 }
