--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "mocha-phantomjs": "~3.1.2",
     "phantomjs": "~1.9.2-0",
     "async": "~0.2.9",
-    "commander": "~2.0.0"
+    "commander": "~2.0.0",
+    "sockjs": "~0.3.8"
   },
   "devDependencies": {
     "expect.js": "~0.2.0",
