--- a/.jshintrc
+++ b/.jshintrc
@@ -1,4 +1,12 @@
 {
+  "globals": {
+  	"describe": false,
+  	"xdescribe": false,
+  	"it": false,
+  	"xit": false,
+  	"beforeEach": false,
+  	"afterEach": false
+  },
   "curly": true,
   "eqnull": true,
   "eqeqeq": true,
