--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sinon-expect": "~0.2.0",
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.7.2",
-    "grunt-mocha-cli": "~1.3.0"
+    "grunt-mocha-cli": "~1.3.0",
+    "expect": "0.0.2"
   }
 }
