--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "sockjs": "~0.3.8"
   },
   "devDependencies": {
-    "expect.js": "~0.2.0",
+    "expect.js": "^0.3.1",
     "sinon": "~1.8.2",
     "sinon-expect": "~0.2.0",
     "grunt": "~0.4.2",
