--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coffeebreak",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "description": "Test runner for Mocha",
   "main": "coffeeBreak.js",
   "directories": {
@@ -8,6 +8,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "coffeebreak": "bin/coffeebreak"
   },
   "repository": {
     "type": "git",
