--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "glob": "~3.2.8",
     "minimatch": "~0.2.14",
     "node.extend": "~1.0.9",
-    "mocha": "~1.17.1",
+    "mocha": "~1.20.1",
     "express": "~3.4.8",
     "hbs": "~2.4.0",
     "mocha-phantomjs": "~3.3.2",
@@ -40,12 +40,10 @@
     "coffeebreak-expect-bundle": "0.0.1"
   },
   "devDependencies": {
-    "expect.js": "^0.3.1",
     "sinon": "~1.8.2",
     "sinon-expect": "~0.2.0",
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.8.0",
-    "grunt-mocha-cli": "~1.6.0",
-    "expect": "0.0.2"
+    "grunt-mocha-cli": "~1.6.0"
   }
 }
