--- a/package.json
+++ b/package.json
@@ -25,25 +25,26 @@
   "license": "MIT",
   "dependencies": {
     "xqnode-logger": "~0.1.0",
-    "glob": "~3.2.8",
-    "minimatch": "~0.2.14",
-    "node.extend": "~1.0.9",
+    "glob": "~4.0.4",
+    "minimatch": "~0.4.0",
+    "node.extend": "~1.0.10",
     "mocha": "~1.20.1",
-    "express": "~3.4.8",
-    "hbs": "~2.4.0",
-    "mocha-phantomjs": "~3.3.2",
-    "phantomjs": "~1.9.7-1",
-    "async": "~0.2.10",
-    "commander": "~2.1.0",
-    "sockjs": "~0.3.8",
-    "express-server": "~0.1.0",
-    "coffeebreak-expect-bundle": "0.0.1"
+    "express": "~4.6.1",
+    "hbs": "~2.7.0",
+    "mocha-phantomjs": "~3.5.0",
+    "phantomjs": "~1.9.7-14",
+    "async": "~0.9.0",
+    "commander": "~2.3.0",
+    "sockjs": "~0.3.9",
+    "express-server": "~0.1.1",
+    "coffeebreak-expect-bundle": "0.0.1",
+    "istanbul": "^0.3.0"
   },
   "devDependencies": {
-    "sinon": "~1.8.2",
+    "sinon": "~1.10.3",
     "sinon-expect": "~0.2.0",
-    "grunt": "~0.4.2",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-mocha-cli": "~1.6.0"
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-mocha-cli": "~1.9.0"
   }
 }
