--- a/package.json
+++ b/package.json
@@ -28,17 +28,12 @@
     "glob": "~4.0.4",
     "minimatch": "~0.4.0",
     "node.extend": "~1.0.10",
-    "mocha": "~1.20.1",
-    "express": "~4.6.1",
-    "hbs": "~2.7.0",
-    "mocha-phantomjs": "~3.5.0",
-    "phantomjs": "~1.9.7-14",
     "async": "~0.9.0",
     "commander": "~2.3.0",
     "sockjs": "~0.3.9",
     "express-server": "~0.1.1",
-    "coffeebreak-expect-bundle": "0.0.1",
-    "istanbul": "^0.3.0"
+    "express": "~4.6.1",
+    "hbs": "~2.7.0"
   },
   "devDependencies": {
     "sinon": "~1.10.3",
