--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
     "async": "~0.9.0",
     "commander": "~2.3.0",
     "sockjs": "~0.3.9",
-    "express-server": "~0.1.1",
+    "express-server": "^0.1.1",
     "express": "~4.6.1",
-    "hbs": "~2.7.0"
+    "hbs": "~2.7.0",
+    "coffeebreak-expect-bundle": "^0.0.1",
+    "coffeebreak-coverage": "^0.0.1",
+    "coffeebreak-mocha-runner": "^0.0.1",
+    "coffeebreak-phantomjs-runner": "^0.0.1"
   },
   "devDependencies": {
     "sinon": "~1.10.3",
